# opencl_c-_sample

./: CMakeLists.txt  README.md
src/: main.cpp
